--- a/Role Playing Game/index.html
+++ b/Role Playing Game/index.html
@@ -23,7 +23,7 @@
 
 
     </body>
-    <script src="./script.js">
+    <script src="script.js">
         //console.log("Hello World");//Hello World
 
 
